--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.30/angular-ui-router.js"></script>
     <script src="Scripts/Script.js"></script>
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+   
     <title>Reminder's Apllication</title>
 </head>
 <body>
@@ -16,7 +19,7 @@
     <div class="header">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Reminder's App</a>
+              <a class="navbar-brand" >Reminder's App</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -26,7 +29,7 @@
                     <a class="nav-link"  ui-sref="reminders">Remiders</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link"  ui-sref="reminders">Insert new reminders</a>
+                    <a class="nav-link"  ui-sref="newReminders">Insert new reminders</a>
                   </li>
                 </ul>
               </div>
